--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -21,8 +21,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Login -> Docker
-        run: docker login -u ${{secrets.REGISTRY_USER_STAGING_V2}} -p ${{secrets.REGISTRY_PASSWORD_STAGING_V2}} $REGISTRY
+        run: docker login ghcr.io -u Abelz123456 -p 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
       - name: Docker Containerize -> (BUILD & PUSH)
         run: |
-          docker build --pull -t "$REGISTRY/$REPOSITORY:$TAG" .
-          docker push "$REGISTRY/$REPOSITORY:$TAG"
+          docker build --pull -t "ghcr.io/$REPOSITORY:$TAG" .
+          docker push "ghcr.io/$REPOSITORY:$TAG"
