--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,8 +19,8 @@ jobs:
   production_deploy:
     runs-on: self-hosted
     environment:
-      name: "celmysql-api Production"
-      url: "https://celmysql-api.thisisruri.my.id"
+      name: "Production 🚀"
+      url: "https://mysql-api.celestialsoftwaresolutuions.my.id"
     steps:
       - uses: actions/checkout@v3
       - name: Login -> Docker
